# ai-diagnosis-case

./: ._.gitignore  ._app.py  ._pyproject.toml  .gitignore  .pre-commit-config.yaml  README.md  allfiles.txt  app.py  clean_requirements.txt  pyproject.toml  requirements.txt
.streamlit/: ._config.toml
configs/: config.yaml
src/: ._file_handler.py  FileHandler.py
src/analysis/: bearing_analyzer.py
src/data_handling/: data_handler.py  engine_manager.py  file_handler.py
src/ui/: admin.py  analyzer_section.py  dashboard.py  engineer.py  sections.py  sidebar.py
src/utils/: config.py  engine_states.csv
